<resources>
    <string name="app_name">Random General Conference Talk</string>
    <string name="action_settings">Settings</string>
    <string name="title">Talk Title</string>
    <string name="talk">Current Talk:</string>
    <string name="noTalk">No Current Talk</string>
    <string name="report">Reports and Sustainings\n\nWhen on, Reports and Sustainings will be excluded.</string>
    <string name="history">History\n\nWhen on, talks that have been read will be excluded</string>
    <string name="inApp">Read in App\n\nWhen on, Talks will be opened in the App as opposed to Gospel Library or a Browser</string>
    <string name="refresDB">Refresh Database</string>
    <string name="refresDBMessage">This will force a check for any missing talks in your database (this should have occurred when you updated the app.) Would you like to proceed?</string>
    <string name="refresDBTitle">Refresh Database</string>
    <string name="resetDB">Reset Database</string>
    <string name="resetDBMessage">WARNING: This will wipe and reset your talk database and history. Would you like to proceed?</string>
    <string name="resetDBTitle">Reset Database</string>
    <string name="delHistory">Delete\nEntire\nHistory</string>
    <string name="action_history">History</string>
    <string name="delete_selected">Delete\nSelected\nTalk</string>
    <string name="how_to_use">How to Use:\nFor a completely random talk leave all fields blank, to filter the talk fill in the desired fields.\n To generate the talk click the bottom left button. To go to the Current Talk click the bottom right button.</string>
    <string name="email">Questions or Problems? Please Email\nvailthor1@gmail.com</string>
    <string name="delete_history_message">Are you certain you want to delete the entire history?</string>
    <string name="delete_history_title">Delete Entire History</string>
    <string name="open_selected">Set\nSelected\nTalk</string>
</resources>
